tests/paczka2/big_fuzzy/85027150.err
Error in line 3: Nfg S563 49,0
Error in line 15: S563 S563 12,1
Error in line 29: uMNFgOiKpCA A431 19,84
Error in line 17: uMNFgOiKpCA A431 18,3
Error in line 33: uMNFgOiKpCA S563 49,4
Error in line 30: S563 A431 91,0
Error in line 37: c6utKeSe49w A431 22,4
Error in line 43: c6utKeSe49w S563 34,2
Error in line 38: 0ZSlGLKvSZ A874 64,4
Error in line 40: S563 S563 52,4
Error in line 44: c6utKeSe49w S697 34,6
Error in line 58: uMNFgOiKpCA S563 40,7
Error in line 49: UdU S563 7,8
Error in line 70: uMNFgOiKpCA A431 56,4
Error in line 77: UdU S563 80,0
Error in line 75: 0ZSlGLKvSZ S697 90,3
Error in line 90: uMNFgOiKpCA A874 74,3
Error in line 98: 0ZSlGLKvSZ S563 14,19
Error in line 95: 0ZSlGLKvSZ A431 26,6
Error in line 94: uMNFgOiKpCA S563 69,8
Error in line 115: I3W21 A874 55,6
Error in line 106: S563 A874 55,5
Error in line 119: S563 A431 30,3
Error in line 101: 0ZSlGLKvSZ S563 74,2
Error in line 81: c6utKeSe49w A874 128,9
Error in line 133: I3W2+ S563 273,2
Error in line 136: uMNFgOiKpCA S563 30,1
Error in line 141: UdU S563 79,90
Error in line 138: UdU S697 37,1
Error in line 146: I3W21 A431 -1,7
Error in line 143: UdU A431 31,3
Error in line 137: I3W21 A431 5,5
Error in line 150: S563 S697 90,4
Error in line 153: S563 S563 80,4
Error in line 125: Nfg S697 47,5
Error in line 164: uMNFgOiKpCA A874 5,7
Error in line 166: uMNFgOiKpCA S563 38,2
Error in line 168: uMNFgOiKpCA S697 84,0
Error in line 169: uMNFgOiKpCA A431 65,3
Error in line 173: UdU A874 16,6
Error in line 135: c6utKeSe49w A431 44,2
Error in line 188: c6utKeSe49w S697 44,20
Error in line 184: uMNFgOiKpCA S697 170,4
Error in line 200: I3W21 S563 87,0
Error in line 203: I3W21 A874 29,2
Error in line 199: c6utKeSe49w S697 11,4
Error in line 206: Nfg S563 49,7
Error in line 208: S563 A431 39,8
Error in line 214: uMNFgOiKpCA A874 32,1
Error in line 216: uMNFgOiKpCA A431 14,4
Error in line 218: uMNFgOiKpCA S563 14,0
Error in line 222: I3W21 S563 12,2
Error in line 230: I3W21 S697 17,0
Error in line 231: I3W21 A874 72,5
Error in line 233: c6utKeSe49w A431 -1,2
Error in line 227: c6utKeSe49w A431 39,2
Error in line 237: 0ZSlGLKvSZ S697 28,8
